Textarea autofocus and flicker fix

--- a/extension/term.css
+++ b/extension/term.css
@@ -1,3 +1,7 @@
+html, body {
+  height:100%;
+}
+
 body {
   background: rgb(30,30,30);
 }
